--- a/src/Gab.Shared/Gab.Shared.csproj
+++ b/src/Gab.Shared/Gab.Shared.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.MicrosoftGraph" Version="1.0.0-beta6" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.5" />
+    <PackageReference Include="Microsoft.Graph" Version="1.14.0" />
   </ItemGroup>
 
 </Project>
