--- a/src/Gab.iOS/Gab.iOS.csproj
+++ b/src/Gab.iOS/Gab.iOS.csproj
@@ -89,6 +89,9 @@
     <CodesignKey>iPhone Distribution</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
@@ -96,6 +99,9 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\iconize-fontawesome-brands.otf" />
+    <BundleResource Include="Resources\iconize-fontawesome-regular.otf" />
+    <BundleResource Include="Resources\iconize-fontawesome-solid.otf" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -193,6 +199,9 @@
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Iconize.FontAwesome">
       <Version>3.5.0.123</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
+      <Version>3.0.0.5</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Settings">
       <Version>3.1.1</Version>
