--- a/src/Gab.iOS/Info.plist
+++ b/src/Gab.iOS/Info.plist
@@ -34,5 +34,11 @@
     <string>Gab</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>UIAppFonts</key>
+    <array>
+        <string>iconize-fontawesome-regular.otf</string>
+        <string>iconize-fontawesome-solid.otf</string>
+        <string>iconize-fontawesome-brands.otf</string>
+    </array>
 </dict>
 </plist>
