--- a/src/Gab.Android/Gab.Android.csproj
+++ b/src/Gab.Android/Gab.Android.csproj
@@ -60,8 +60,8 @@
     <PackageReference Include="LiveXAML">
       <Version>2.1.70</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.SignalR.Client">
-      <Version>2.4.1</Version>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client">
+      <Version>3.0.0-preview4-19216-03</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
@@ -82,6 +82,9 @@
       <Version>1.4.1-beta</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>17.1.0.41</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
       <Version>17.1.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh">
