--- a/src/Gab/Gab.csproj
+++ b/src/Gab/Gab.csproj
@@ -13,13 +13,14 @@
     <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
     <PackageReference Include="AsyncErrorHandler.Fody" Version="1.2.3" />
     <PackageReference Include="LiveXAML" Version="2.1.70" />
-    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.0.0-preview4-19216-03" />
     <PackageReference Include="Plugin.Multilingual" Version="1.0.2" />
     <PackageReference Include="Polly" Version="7.1.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.1" />
     <PackageReference Include="Refit" Version="4.6.107" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.4.1-beta" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.1.0.41" />
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="17.1.0.41" />
     <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="17.1.0.41" />
     <PackageReference Include="Syncfusion.Xamarin.SfSchedule" Version="17.1.0.41" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
@@ -48,6 +49,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Cells\EventCell.xaml.cs">
+      <DependentUpon>EventCell.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Pages\MeetingRoomPage.xaml.cs">
       <DependentUpon>MeetingRoomPage.xaml</DependentUpon>
     </Compile>
