--- a/src/Gab.Shared/Gab.Shared.csproj
+++ b/src/Gab.Shared/Gab.Shared.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.5" />
     <PackageReference Include="Microsoft.Graph" Version="1.14.0" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.6.1" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.4.1-beta" />
   </ItemGroup>
 
