--- a/src/Gab.Android/Gab.Android.csproj
+++ b/src/Gab.Android/Gab.Android.csproj
@@ -61,7 +61,7 @@
       <Version>2.1.70</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client">
-      <Version>3.0.0-preview4-19216-03</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
