--- a/src/Gab.iOS/Gab.iOS.csproj
+++ b/src/Gab.iOS/Gab.iOS.csproj
@@ -165,7 +165,7 @@
       <Version>2.1.70</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client">
-      <Version>3.0.0-preview4-19216-03</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Plugin.Multilingual">
       <Version>1.0.2</Version>
