--- a/src/Gab/Gab.csproj
+++ b/src/Gab/Gab.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
     <PackageReference Include="AsyncErrorHandler.Fody" Version="1.2.3" />
     <PackageReference Include="LiveXAML" Version="2.1.70" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.0.0-preview4-19216-03" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
     <PackageReference Include="Plugin.Multilingual" Version="1.0.2" />
     <PackageReference Include="Polly" Version="7.1.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.1" />
