--- a/src/Gab.Android/Gab.Android.csproj
+++ b/src/Gab.Android/Gab.Android.csproj
@@ -94,6 +94,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfSchedule">
       <Version>17.1.0.51</Version>
     </PackageReference>
+    <PackageReference Include="System.IO.Pipelines">
+      <Version>4.5.3</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
